{
  "version": 4,
  "terraform_version": "1.3.4",
  "serial": 14,
  "lineage": "2e4fcdf8-9615-17fa-f90f-af71dc34b392",
  "resources": [
    {
      "module": "module.hello_world_app",
      "mode": "data",
      "type": "aws_vpc",
      "name": "default",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:936301010316:vpc/vpc-0595dadbc6f769ef5",
            "cidr_block": "172.31.0.0/16",
            "cidr_block_associations": [
              {
                "association_id": "vpc-cidr-assoc-00f96921f38d7efa2",
                "cidr_block": "172.31.0.0/16",
                "state": "associated"
              }
            ],
            "default": true,
            "dhcp_options_id": "dopt-02bbad37fec0ee405",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "id": "vpc-0595dadbc6f769ef5",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0c825b345f5f5e911",
            "owner_id": "936301010316"
          }
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_listener_rule",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:targetgroup/hello-world-test-p0wqEt/8c78e454655593d8",
                "type": "forward"
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener-rule/app/hello-world-test-p0wqEt/dfa9849899a42834/17fe9f346ee049d2/f8fb0a5541be97d0",
            "condition": [
              {
                "host_header": [],
                "http_header": [],
                "http_request_method": [],
                "path_pattern": [
                  {
                    "values": [
                      "*"
                    ]
                  }
                ],
                "query_string": [],
                "source_ip": []
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener-rule/app/hello-world-test-p0wqEt/dfa9849899a42834/17fe9f346ee049d2/f8fb0a5541be97d0",
            "listener_arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener/app/hello-world-test-p0wqEt/dfa9849899a42834/17fe9f346ee049d2",
            "priority": 100,
            "tags": null,
            "tags_all": {}
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.aws_lb_target_group.asg",
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.data.aws_vpc.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_lb_listener.http",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app",
      "mode": "managed",
      "type": "aws_lb_target_group",
      "name": "asg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:targetgroup/hello-world-test-p0wqEt/8c78e454655593d8",
            "arn_suffix": "targetgroup/hello-world-test-p0wqEt/8c78e454655593d8",
            "connection_termination": false,
            "deregistration_delay": "300",
            "health_check": [
              {
                "enabled": true,
                "healthy_threshold": 2,
                "interval": 15,
                "matcher": "200",
                "path": "/",
                "port": "traffic-port",
                "protocol": "HTTP",
                "timeout": 3,
                "unhealthy_threshold": 2
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:targetgroup/hello-world-test-p0wqEt/8c78e454655593d8",
            "lambda_multi_value_headers_enabled": false,
            "load_balancing_algorithm_type": "round_robin",
            "name": "hello-world-test-p0wqEt",
            "port": 8080,
            "protocol": "HTTP",
            "protocol_version": "HTTP1",
            "proxy_protocol_v2": false,
            "slow_start": 0,
            "stickiness": [
              {
                "cookie_duration": 86400,
                "enabled": false,
                "type": "lb_cookie"
              }
            ],
            "target_type": "instance",
            "vpc_id": "vpc-0595dadbc6f769ef5"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_vpc.default"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb",
      "name": "example",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "access_logs": [
              {
                "enabled": false
              }
            ],
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/hello-world-test-p0wqEt/dfa9849899a42834",
            "arn_suffix": "app/hello-world-test-p0wqEt/dfa9849899a42834",
            "desync_mitigation_mode": "defensive",
            "dns_name": "hello-world-test-p0wqEt-515714659.us-east-2.elb.amazonaws.com",
            "drop_invalid_header_fields": false,
            "enable_cross_zone_load_balancing": true,
            "enable_deletion_protection": false,
            "enable_http2": true,
            "enable_waf_fail_open": false,
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/hello-world-test-p0wqEt/dfa9849899a42834",
            "idle_timeout": 60,
            "internal": false,
            "ip_address_type": "ipv4",
            "load_balancer_type": "application",
            "name": "hello-world-test-p0wqEt",
            "security_groups": [
              "sg-0c036134b67385597"
            ],
            "subnet_mapping": [
              {
                "subnet_id": "subnet-01b2b9b9cd8cd84bf"
              },
              {
                "subnet_id": "subnet-0a128ab0d415118ee"
              },
              {
                "subnet_id": "subnet-0b08850f6b4bcf527"
              }
            ],
            "subnets": [
              "subnet-01b2b9b9cd8cd84bf",
              "subnet-0a128ab0d415118ee",
              "subnet-0b08850f6b4bcf527"
            ],
            "vpc_id": "vpc-0595dadbc6f769ef5",
            "zone_id": "Z3AADJGX6KTTL2"
          },
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_lb_listener",
      "name": "http",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "alpn_policy": null,
            "arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener/app/hello-world-test-p0wqEt/dfa9849899a42834/17fe9f346ee049d2",
            "certificate_arn": null,
            "default_action": [
              {
                "authenticate_cognito": [],
                "authenticate_oidc": [],
                "fixed_response": [
                  {
                    "content_type": "text/plain",
                    "message_body": "404: page not found",
                    "status_code": "404"
                  }
                ],
                "forward": [],
                "order": 1,
                "redirect": [],
                "target_group_arn": "",
                "type": "fixed-response"
              }
            ],
            "id": "arn:aws:elasticloadbalancing:us-east-2:936301010316:listener/app/hello-world-test-p0wqEt/dfa9849899a42834/17fe9f346ee049d2",
            "load_balancer_arn": "arn:aws:elasticloadbalancing:us-east-2:936301010316:loadbalancer/app/hello-world-test-p0wqEt/dfa9849899a42834",
            "port": 80,
            "protocol": "HTTP",
            "ssl_policy": "",
            "tags": null,
            "tags_all": {},
            "timeouts": null
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.data.aws_subnets.default",
            "module.hello_world_app.module.alb.aws_lb.example",
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "alb",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:936301010316:security-group/sg-0c036134b67385597",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-0c036134b67385597",
            "ingress": [],
            "name": "hello-world-test-p0wqEt",
            "name_prefix": "",
            "owner_id": "936301010316",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0595dadbc6f769ef5"
          },
          "sensitive_attributes": []
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_all_outbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 0,
            "id": "sgrule-3103389978",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "-1",
            "security_group_id": "sg-0c036134b67385597",
            "self": false,
            "source_security_group_id": null,
            "to_port": 0,
            "type": "egress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.alb",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 80,
            "id": "sgrule-4118027734",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-0c036134b67385597",
            "self": false,
            "source_security_group_id": null,
            "to_port": 80,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.alb.aws_security_group.alb"
          ]
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group",
      "name": "instance",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-2:936301010316:security-group/sg-08f1a1e3cc842ce36",
            "description": "Managed by Terraform",
            "egress": [],
            "id": "sg-08f1a1e3cc842ce36",
            "ingress": [],
            "name": "hello-world-test-p0wqEt-instance",
            "name_prefix": "",
            "owner_id": "936301010316",
            "revoke_rules_on_delete": false,
            "tags": null,
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0595dadbc6f769ef5"
          },
          "sensitive_attributes": [],
          "create_before_destroy": true
        }
      ]
    },
    {
      "module": "module.hello_world_app.module.asg",
      "mode": "managed",
      "type": "aws_security_group_rule",
      "name": "allow_server_http_inbound",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 2,
          "attributes": {
            "cidr_blocks": [
              "0.0.0.0/0"
            ],
            "description": null,
            "from_port": 8080,
            "id": "sgrule-1091019893",
            "ipv6_cidr_blocks": null,
            "prefix_list_ids": null,
            "protocol": "tcp",
            "security_group_id": "sg-08f1a1e3cc842ce36",
            "self": false,
            "source_security_group_id": null,
            "to_port": 8080,
            "type": "ingress"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "module.hello_world_app.module.asg.aws_security_group.instance"
          ]
        }
      ]
    }
  ]
}